# envaultx

./: .envault.toml.example  .gitignore  README.md  pyproject.toml
envault/: __init__.py  cli.py  config.py  envault.py  exceptions.py  mcp_server.py  patterns.py  scanner.py  vault.py  wrappers.py
tests/: test_cli.py  test_envault.py  test_mcp.py  test_scanner.py  test_vault.py  test_wrappers.py
tests/fixtures/clean_samples/: sample.txt
tests/fixtures/edge_cases/: sample.txt
tests/fixtures/secret_samples/: sample.txt
