[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envault"
version = "0.1.0"
description = "What your LLM sees, stays safe."
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
crypto = ["cryptography>=41.0"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
all = ["spacy>=3.7", "cryptography>=41.0", "anthropic>=0.30", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "httpx"]

[project.scripts]
envault = "envault.cli:cli"
